<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string> <!-- To be deleted -->


    <string name="action_settings">Settings</string>
    <string name="nano_degree_apps_title">My Apps</string>
    <string name="spotify_streamer_title">Spotify Streamer</string>
    <string name="scores_app_title">Scores App</string>
    <string name="library_app_title">Library App</string>
    <string name="build_it_bigger_title">Build It Bigger</string>
    <string name="xyz_reader_title">XYZ Reader</string>
    <string name="capstone_title">Capstone: My Own App</string>
    <string name="button_laucn_app">This button will launch</string>
    <string name="title_activity_spotify_streamer">SpotifyStreamer</string>


</resources>
